update docker file